#108098 fix cursor being hidden in firefox, patch by quicksketch. note, the menu no longer stays on top as you scroll, however forms are usable once again. this feature will return in version 3 when it's rewritten to be 100% jQuery.

--- a/simplemenu.css
+++ b/simplemenu.css
@@ -14,7 +14,7 @@ background:#eee;
 border-bottom:1px solid #a3a3a3;
 font:12px Arial, Helvetica, sans-serif;
 left:0;
-position:fixed;
+position:static;
 top:0;
 width:100%;
 }
