--- a/simplemenu.css
+++ b/simplemenu.css
@@ -1,6 +1,6 @@
 /* $Id$ */
 
-ul#menubar,ul#menubar ul,ul#menubar li,ul#menubar a {
+ul#simplemenu,ul#simplemenu ul,ul#simplemenu li,ul#simplemenu a {
 color:#333;
 display:block;
 list-style:none;
@@ -9,7 +9,7 @@ padding:0;
 z-index:48;
 }
 
-ul#menubar {
+ul#simplemenu {
 background:#eee;
 border-bottom:1px solid #a3a3a3;
 font:12px Arial, Helvetica, sans-serif;
@@ -20,11 +20,11 @@ width:100%;
 height:22px;
 }
 
-ul#menubar li {
+ul#simplemenu li {
 float:left;
 }
 
-ul#menubar li a {
+ul#simplemenu li a {
 background:#ccc;
 border-right:1px solid #a3a3a3;
 font-weight:400;
@@ -32,26 +32,26 @@ padding:0.3em 0.6em;
 text-decoration:none;
 }
 
-ul#menubar li:hover > a {
+ul#simplemenu li:hover > a {
 background:orange;
 }
 
-ul#menubar ul li a {
+ul#simplemenu ul li a {
 border:none;
 width:11em;
 }
 
-ul#menubar li.leaf {
+ul#simplemenu li.leaf {
 background:#eee url(bullet_go.gif) no-repeat 0.2em;
 padding-left:2em;
 }
 
-ul#menubar li.expanded {
+ul#simplemenu li.expanded {
 background:#eee url(folder.gif) no-repeat 0.2em;
 padding-left:2em;
 }
 
-ul#menubar li ul {
+ul#simplemenu li ul {
 background:#ccc;
 border:1px solid #a3a3a3;
 left:-9999px;
@@ -60,14 +60,14 @@ width:15em;
 z-index:24;
 }
 
-ul#menubar li ul ul {
+ul#simplemenu li ul ul {
 margin:0 0 0 3em;
 }
 
-ul#menubar li:hover ul ul,ul#menubar li:hover ul ul ul,ul#menubar li.sfhover ul ul,ul#menubar li.sfhover ul ul ul {
+ul#simplemenu li:hover ul ul,ul#simplemenu li:hover ul ul ul,ul#simplemenu li.sfhover ul ul,ul#simplemenu li.sfhover ul ul ul {
 left:-9999px;
 }
 
-ul#menubar li:hover ul,ul#menubar li li:hover ul,ul#menubar li li li:hover ul,ul#menubar li.sfhover ul,ul#menubar li li.sfhover ul,ul#menubar li li li.sfhover ul {
+ul#simplemenu li:hover ul,ul#simplemenu li li:hover ul,ul#simplemenu li li li:hover ul,ul#simplemenu li.sfhover ul,ul#simplemenu li li.sfhover ul,ul#simplemenu li li li.sfhover ul {
 left:auto;
 }
