--- a/simplemenu.css
+++ b/simplemenu.css
@@ -14,7 +14,7 @@ background:#ddd;
 border-bottom:1px solid #999;
 font:11px Verdana, Helvetica, sans-serif;
 left:0;
-position:fixed;
+position:absolute;
 top:0;
 width:100%;
 height:21px;
