--- a/simplemenu.css
+++ b/simplemenu.css
@@ -23,7 +23,8 @@ height:21px;
 ul#simplemenu li {
 float:left;
 border-right:1px solid #999;
-border-left:1px solid #eee;  
+border-left:1px solid #eee;
+text-align: left;  
 }
 
 ul#simplemenu li a {
