--- a/tode.css
+++ b/tode.css
@@ -1,3 +1,32 @@
 .ctu-term-edit-form-box{border: 1px solid #ddd; padding:0.5em;}
 #node-form fieldset.tcu-advanced-options,
 #node-form fieldset.tcu-term-fields{width:45%; display:inline-block; vertical-align: top;}
+
+.tode-add-modal-wrapper{
+	
+}
+.tode-add-modal-wrapper .form-item{
+	display:inline-block;
+}
+.tode-add-modal-wrapper .tode-add-modal-links{
+	display:inline-block;
+}
+
+#modalContent{
+		
+}
+
+#modalContent div.ctools-modal-content{
+	padding:5px;
+	-moz-border-radius: 10px;
+		-webkit-border-radius: 10px;
+		border-radius: 10px;
+		
+	border: 0 solid #999;
+	
+}
+#modalContent div.ctools-modal-content .modal-header,
+#modalContent div.ctools-modal-content .modal-header a,
+#modalContent div.ctools-modal-content .modal-header span{
+	background-color: transparent; color:#000!important;
+}
