ctools modal css + description white on black
Signed-off-by: bachy <git@g-u-i.net>

--- a/less/guibik.less
+++ b/less/guibik.less
@@ -83,8 +83,10 @@ select.form-select {
 
 /** popup description */
 .page-content .form-item .description {
-  color:#0092D2;
+  color:#fff;
   border-top:1px solid #E0E0E0;
+/*	background: #1A1A1A url() no-repeat scroll top left;*/
+	background:url(../images/popup.png) 50% 100% no-repeat;
 	a{text-decoration: underline;}
 }
 
@@ -131,7 +133,7 @@ li{list-style: none inside url();}
   border:1px solid #BFBFBF;
   margin:0px 0px 10px;
   position:relative;
-  }
+}
 
 .vertical-tabs .fieldset-content,
 .vertical-tabs fieldset.titled .fieldset-content {
@@ -397,4 +399,25 @@ body.admin-vertical.admin-expanded #admin-menu-wrapper{border-left:1px solid #32
 	}
 
 }
+
+
+#modalContent{
+		
+}
+
+#modalContent div.ctools-modal-content{
+	padding:5px;
+	-moz-border-radius: 10px;
+		-webkit-border-radius: 10px;
+		border-radius: 10px;
+		
+	border: 1 solid #999;
+	
+}
+#modalContent div.ctools-modal-content .modal-header,
+#modalContent div.ctools-modal-content .modal-header a,
+#modalContent div.ctools-modal-content .modal-header span{
+	background-color: transparent; color:#000!important;
+}
+
 
