--- a/editmenu.css
+++ b/editmenu.css
@@ -4,13 +4,13 @@
  */
 
 /*** ESSENTIAL STYLES ***/
-#simplemenu, #simplemenu * {
+#editmenu, #editmenu * {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-#simplemenu {
+#editmenu {
   line-height: 1.0;
   position: relative;
   /*position: fixed;
@@ -18,7 +18,7 @@
   z-index: 9999;
 }
 
-#simplemenu ul {
+#editmenu ul {
   position: absolute;
   top: -999em;
   width: 14em;
@@ -26,34 +26,34 @@
   line-height: 1em;
 }
 
-#simplemenu ul li,
-#simplemenu a {
+#editmenu ul li,
+#editmenu a {
   width: 100%;
 }
 
-#simplemenu li {
+#editmenu li {
   float: left;
   position: relative;
   z-index: 99;
 }
 
-#simplemenu a {
+#editmenu a {
   display: block;
 }
 
-#simplemenu li:hover ul,
-ul#simplemenu li.sfHover ul {
+#editmenu li:hover ul,
+ul#editmenu li.sfHover ul {
   left: 0px;
   top: 21px;
 }
 
-#simplemenu li:hover li ul,
-#simplemenu li.sfHover li ul {
+#editmenu li:hover li ul,
+#editmenu li.sfHover li ul {
   top: -999em;
 }
 
-#simplemenu li li:hover ul,
-ul#simplemenu li li.sfHover ul {
+#editmenu li li:hover ul,
+ul#editmenu li li.sfHover ul {
   left: 14em;
   top: -1px;
 }
