--- a/themes/gui.net/gui.net.css
+++ b/themes/gui.net/gui.net.css
@@ -1,22 +1,22 @@
 /* ------ DISPLAY ------ */
-body.simplemenu-enabled{margin-top:23px;}
-.simplemenu-block{height:23px;position:fixed;top:0;left:0;width:100%;}
-ul#simplemenu,ul#simplemenu *{margin:0;padding:0;list-style:none;}
-ul#simplemenu{line-height:1.0;position:relative;width:100%;z-index:9999;}
-ul#simplemenu ul{position:absolute;top:-999em;width:14em;font-size:1em;line-height:1em;}
-ul#simplemenu ul li{width:100%;}
-ul#simplemenu a{width:auto;}
-ul#simplemenu li{float:left;position:relative;z-index:99;}
-ul#simplemenu a{display:block;}
-ul#simplemenu li:hover ul,
-ul#simplemenu li.sfHover ul{left:0px;top:30px;}
-ul#simplemenu li:hover li ul,
-ul#simplemenu li.sfHover li ul{top:-999em;}
-ul#simplemenu li li:hover ul,
-ul#simplemenu li li.sfHover ul{left:14em;top:-1px;}
+body.editmenu-enabled{margin-top:23px;}
+.editmenu-block{height:23px;position:fixed;top:0;left:0;width:100%;}
+ul#editmenu,ul#editmenu *{margin:0;padding:0;list-style:none;}
+ul#editmenu{line-height:1.0;position:relative;width:100%;z-index:9999;}
+ul#editmenu ul{position:absolute;top:-999em;width:14em;font-size:1em;line-height:1em;}
+ul#editmenu ul li{width:100%;}
+ul#editmenu a{width:auto;}
+ul#editmenu li{float:left;position:relative;z-index:99;}
+ul#editmenu a{display:block;}
+ul#editmenu li:hover ul,
+ul#editmenu li.sfHover ul{left:0px;top:30px;}
+ul#editmenu li:hover li ul,
+ul#editmenu li.sfHover li ul{top:-999em;}
+ul#editmenu li li:hover ul,
+ul#editmenu li li.sfHover ul{left:14em;top:-1px;}
 .superfish li:hover ul,
 .superfish li li:hover ul{top:-999em;}
-ul#simplemenu:after{
+ul#editmenu:after{
 	clear: both;
 	content: '.';
 	display: block;
@@ -28,14 +28,14 @@ ul#simplemenu:after{
 
 
 /* ------ STYLE ------ */
-ul#simplemenu {
+ul#editmenu {
 	background-color:#333;
 	border-bottom: 1px dotted #9A9A9A;
 	box-shadow: 0 0 15px #000000 inset;
 	-moz-box-shadow: 0 0 15px #000000 inset;
 	-webkit-box-shadow: 0 0 15px #000000 inset;
 }
-.simplemenu-block:after{
+.editmenu-block:after{
 	content:'by g.u.i.';
 	color:#fff;
 	font: italic 600 1em 'Baskerville',serif;
@@ -45,14 +45,14 @@ ul#simplemenu {
 	right:1em;
 	z-index:10000;
 }
-ul#simplemenu li:hover ul,
-ul#simplemenu li.sfHover ul{
+ul#editmenu li:hover ul,
+ul#editmenu li.sfHover ul{
 	background:#1a1a1a;
 	border: 1px dotted #9A9A9A;
 	padding: 6px 0;
 }
-ul#simplemenu li:hover ul:before,
-ul#simplemenu li.sfHover ul:before{
+ul#editmenu li:hover ul:before,
+ul#editmenu li.sfHover ul:before{
 	background:url('bkgd-border.png') 15px 0 no-repeat;
 	content:'';
 	display:block;
@@ -64,19 +64,19 @@ ul#simplemenu li.sfHover ul:before{
 
 
 /* ------ FONT ------ */
-.simplemenu-block{font:normal normal 100 11px/1em 'Monaco','Lucida Console','Consolas',monospace;color:#fff;}
-ul#simplemenu a{color:#fff;margin:4px;padding:2px;text-decoration:none;word-spacing:-.35em;
+.editmenu-block{font:normal normal 100 11px/1em 'Monaco','Lucida Console','Consolas',monospace;color:#fff;}
+ul#editmenu a{color:#fff;margin:4px;padding:2px;text-decoration:none;word-spacing:-.35em;
 	transition: background-color .5s, color .5s;
 	-moz-transition: background-color .5s, color .5s;
 	-o-transition: background-color .5s, color .5s;
 	-webkit-transition: background-color .5s, color .5s;
 }
-ul#simplemenu>li.first a{color:#777;}
+ul#editmenu>li.first a{color:#777;}
 
-ul#simplemenu li.sfHover>a,
-ul#simplemenu a:focus,
-ul#simplemenu a:hover,
-ul#simplemenu a:active{
+ul#editmenu li.sfHover>a,
+ul#editmenu a:focus,
+ul#editmenu a:hover,
+ul#editmenu a:active{
 	color: #000;
 	background-color:#fff;
 	transition-duration:0s;
@@ -84,9 +84,9 @@ ul#simplemenu a:active{
 	-o-transition-duration:0s;
 	-webkit-transition-duration:0s;
 }
-ul#simplemenu>li.first a:focus,
-ul#simplemenu>li.first a:hover,
-ul#simplemenu>li.first a:active{
+ul#editmenu>li.first a:focus,
+ul#editmenu>li.first a:hover,
+ul#editmenu>li.first a:active{
 	color: #000;
 	background-color:#cc3733;
 }
