--- a/less/guibik.less
+++ b/less/guibik.less
@@ -387,6 +387,11 @@ body.admin-vertical.admin-expanded #admin-menu-wrapper{border-left:1px solid #32
 	}	
 }
 .view{
+  .view-header{
+		padding:0.5em; margin:0 0 1em 0;
+		border: 1px solid  #CCC; .border-radius(5px,5px,5px,5px);
+		font-weight:bold;
+  }
 	.pager{
 		padding:1em 0; margin:0; text-align: right; height:auto;
 		ul{
